--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,6 @@ add_executable(lab4 main.cpp
         DirectedGraph.hpp
         tests.hpp
         tests.cpp
-        data_structures/PriorityQueue.hpp)
+        data_structures/PriorityQueue.hpp
+        graph_algorithms.hpp
+        graph_algorithms.cpp)
