Add time graphic for dijkstra algorithm and complete csv to dot function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(lab4 main.cpp
         dijkstra_timer.cpp
         menu.hpp
         menu.cpp
-        graphics/dijkstra_times_graphic.hpp)
+        graphics/dijkstra_times_graphic.hpp
+        graphics/dijkstra_times_graphic.cpp)
 
 target_link_libraries(lab4 ${Boost_LIBRARIES})
